# LearnandbuildFirst

./: Cargo.toml  Notesforme.md  tasks.json
src/: app.rs  cli.rs  main.rs  task.rs  tui.rs  ui.rs
